# pc-emu

./: .gitignore  Cargo.toml  README.md  test.txt  test.txt.asc
src/: keyboard.rs  lib.rs  main.rs  screen.rs  shell.rs
src/keyboard/: mod.rs  types.rs
src/libs/: io.rs  mod.rs
src/runner/: fs.rs  mod.rs
src/runner/hasm/: alloc.rs  mod.rs  parser.rs  types.rs
src/runner/shell/: mod.rs
src/runner/shell/builtin/: cd.rs  echo.rs  exit.rs  help.rs  host_pwd.rs  hsc.rs  ls.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  touch.rs
