[package]
name = "hadley-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.26.1"
glfw = { version = "0.51.0", features = ["ash", "glfw-sys", "image", "log", "vulkan"] }
ratatui = { version = "0.21.0", features = ["all-widgets"] }
tui = "0.19.0"
