[package]
name = "hadley-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "2.3.3"
clap = { version = "4.3.9", features = ["derive"] }
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
crossterm = "0.26.1"
lazy_static = "1.4.0"
once_cell = "1.18.0"
parse_int = "0.6.0"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
serde = { version = "1.0.166", features = ["derive"] }
shlex = "1.1.0"
tui = "0.19.0"
